--- a/my.mavenized.herolanguage/pom.xml
+++ b/my.mavenized.herolanguage/pom.xml
@@ -45,36 +45,6 @@
 					</filesets>
 				</configuration>
 			</plugin>
-			<!-- http://stackoverflow.com/questions/3872355/how-to-convert-file-separator-in-maven -->
-			<!-- http://timezra.blogspot.de/2009/06/setting-maven-properties-with-groovy.html -->
-			<plugin>
-				<groupId>org.codehaus.gmaven</groupId>
-				<artifactId>gmaven-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>setproperty</id>
-						<phase>validate</phase>
-						<goals>
-							<goal>execute</goal>
-						</goals>
-						<configuration>
-							<classpath>
-								<element>
-									<groupId>commons-lang</groupId>
-									<artifactId>commons-lang</artifactId>
-									<version>2.4</version>
-								</element>
-							</classpath>
-							<source>
-								if (org.apache.commons.lang.SystemUtils.IS_OS_WINDOWS) {
-									pom.properties['main.basedir']='file://' +
-									project.basedir.absolutePath.replace('\','/');
-								}
-							</source>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
@@ -92,7 +62,7 @@
 					<includePluginDependencies>true</includePluginDependencies>
 					<mainClass>org.eclipse.emf.mwe2.launch.runtime.Mwe2Launcher</mainClass>
 					<arguments>
-						<argument>${main.basedir}/src/my/mavenized/GenerateHeroLanguage.mwe2</argument>
+						<argument>file://${project.basedir}/src/my/mavenized/GenerateHeroLanguage.mwe2</argument>
 					</arguments>
 				</configuration>
 				<dependencies>
